gccida/g0/recog_18
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23490:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23491:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2b = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23494:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23527:40: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x3) ) 
     ~~~~~~~~~~~~~~~~~~~~              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23529:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x3; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23530:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23536:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2d = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23546:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x4m) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23548:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4m; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23549:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4n = ( rtx)x3g[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23555:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3h = ( rtx)x2d[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23559:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x4p) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23561:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4p; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23562:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4q = ( rtx)x3h[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23592:40: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x4) ) 
     ~~~~~~~~~~~~~~~~~~~~              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23594:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23595:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = ( rtx)x3c[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23601:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3d = ( rtx)x2d[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/insn-recog.c:23605:41: error: too few arguments to function call, expected 2, have 1
if ( ext_register_operand( ( __int64)x4c) ) 
     ~~~~~~~~~~~~~~~~~~~~               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/tm-preds.h:37:1: note: 'ext_register_operand' declared here
extern int ext_register_operand PARAMS ((rtx, enum machine_mode));
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_18/src/obj/insn-recog.o] Error 1
